--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "node-sass": "^4.13.0",
-    "normalize.css": "^8.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-fcctest": "^1.3.5",
     "react-scripts": "3.2.0",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
