--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "react-spring": "^8.0.27",
-    "react-transition-group": "^4.3.0"
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
